--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta
-      name="description"
-      content="goit-react-hw-02-feedback"
-    />
+    <meta name="description" content="goit-react-hw-04-hooks-feedback" />
     <title>hw-02-feedback</title>
   </head>
   <body>
