--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="goit-react-hw-04-hooks-feedback" />
-    <title>hw-02-feedback</title>
+    <title>hooks-feedback</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
